Сетка личного проекта index

--- a/catalog.html
+++ b/catalog.html
@@ -120,7 +120,7 @@
                 <div class="product-item">
                     <div class="hit">Хит</div>
                     <div class="preview">
-                        <img src="img/orange.jpg" width="600" height="600" alt="Сливочное">
+                        <img src="img/orange.jpg" width="267" height="267" alt="Сливочное">
                     </div>
                     <div class="price-title">
                         <span class="price">310</span><span class="ruble">P/кг</span>
@@ -132,7 +132,7 @@
                 <div class="product-item">
                     <div class="hit">Хит</div>
                     <div class="preview">
-                        <img src="img/icecream_coffee.jpg" width="600" height="600" alt="Сливочно-кофейное">
+                        <img src="img/icecream_coffee.jpg" width="267" height="267" alt="Сливочно-кофейное">
                     </div>
                     <div class="price-title">
                         <span class="price">380</span><span class="ruble">P/кг</span>
@@ -144,7 +144,7 @@
                 <div class="product-item">
                     <div class="hit">Хит</div>
                     <div class="preview">
-                        <img src="img/icecream_strawberry.jpg" width="600" height="600" alt="Сливочно-клубничное">
+                        <img src="img/icecream_strawberry.jpg" width="267" height="267" alt="Сливочно-клубничное">
                     </div>
                         <div class="price-title">
                         <span class="price">355</span><span class="ruble">P/кг</span>
@@ -156,7 +156,7 @@
                 <div class="product-item">
                     <div class="hit">Хит</div>
                     <div class="preview">
-                        <img src="img/icecream_caramel.jpg" width="600" height="600" alt="Сливочное крем-брюле">
+                        <img src="img/icecream_caramel.jpg" width="267" height="267" alt="Сливочное крем-брюле">
                     </div>
                     <div class="price-title">
                         <span class="price">415</span><span class="ruble">P/кг</span>
@@ -168,7 +168,7 @@
                 <div class="product-item">
                     <div class="hit">Хит</div>
                     <div class="preview">
-                        <img src="img/icecream_cowberry.jpg" width="600" height="600" alt="Сливочное с брусничным джемом">
+                        <img src="img/icecream_cowberry.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
                     </div>
                     <div class="price-title">
                         <span class="price">325</span><span class="ruble">P/кг</span>
@@ -180,7 +180,7 @@
                 <div class="product-item">
                     <div class="hit">Хит</div>
                     <div class="preview">
-                        <img src="img/icecream_bilberry.jpg" width="600" height="600" alt="Сливочно-черничное">
+                        <img src="img/icecream_bilberry.jpg" width="267" height="267" alt="Сливочно-черничное">
                     </div>
                     <div class="price-title">
                         <span class="price">420</span><span class="ruble">P/кг</span>
@@ -192,7 +192,7 @@
                 <div class="product-item">
                     <div class="hit">Хит</div>
                     <div class="preview">
-                        <img src="img/icecream_lemon.jpg" width="600" height="600" alt="Сливочно-лимонное">
+                        <img src="img/icecream_lemon.jpg" width="267" height="267" alt="Сливочно-лимонное">
                     </div>
                     <div class="price-title">
                         <span class="price">375</span><span class="ruble">P/кг</span>
@@ -204,7 +204,7 @@
                 <div class="product-item">
                     <div class="hit">Хит</div>
                     <div class="preview">
-                        <img src="img/icecream_chocolate.jpg" width="600" height="600" alt="Сливочное с шоколадной стружкой">
+                        <img src="img/icecream_chocolate.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
                     </div>
                     <div class="price-title">
                         <span class="price">320</span><span class="ruble">P/кг</span>
@@ -216,7 +216,7 @@
                 <div class="product-item">
                     <div class="hit">Хит</div>
                     <div class="preview">
-                        <img src="img/icecream_vanilla.jpg" width="600" height="600" alt="Сливочно-ванильное">
+                        <img src="img/icecream_vanilla.jpg" width="267" height="267" alt="Сливочно-ванильное">
                     </div>
                     <div class="price-title">
                         <span class="price">440</span><span class="ruble">P/кг</span>
@@ -228,7 +228,7 @@
                 <div class="product-item">
                     <div class="hit">Хит</div>
                     <div class="preview">
-                        <img src="img/icecream_menthol.jpg" width="600" height="600" alt="Сливочное с ментолом">
+                        <img src="img/icecream_menthol.jpg" width="267" height="267" alt="Сливочное с ментолом">
                     </div>
                     <div class="price-title">
                         <span class="price">435</span><span class="ruble">P/кг</span>
@@ -240,7 +240,7 @@
                 <div class="product-item">
                     <div class="hit">Хит</div>
                     <div class="preview">
-                        <img src="img/icecream_black_chocolate.jpg" width="600" height="600" alt="Сливочно с кусочками черного шоколада">
+                        <img src="img/icecream_black_chocolate.jpg" width="267" height="267" alt="Сливочно с кусочками черного шоколада">
                     </div>
                     <div class="price-title">
                         <span class="price">355</span><span class="ruble">P/кг</span>
@@ -252,7 +252,7 @@
                 <div class="product-item">
                     <div class="hit">Хит</div>
                     <div class="preview">
-                        <img src="img/icecream_mint.jpg" width="600" height="600" alt="Сливочное с мятным сиропом">
+                        <img src="img/icecream_mint.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
                     </div>
                     <div class="price-title">
                         <span class="price">420</span><span class="ruble">P/кг</span>
@@ -263,37 +263,37 @@
                 </div>
             </article>
             <div class="pagination">
-                <ul class="pagination-list">
-                    <li class="pagination-item">
+                <ul>
+                    <li>
                         <a class="pagination-control" href="#"></a>
                     </li>
-                    <li class="pagination-item">
+                    <li>
                         <a href="#">1</a>
                     </li>
-                    <li class="pagination-item active">
+                    <li>
                         <a href="#">2</a>
                     </li>
-                    <li class="pagination-item">
+                    <li>
                         <a href="#">3</a>
                     </li>
-                    <li class="pagination-item">
+                    <li>
                         <a href="#">4</a>
                     </li>
-                    <li class="pagination-item">
+                    <li>
                         <a href="#">5</a>
                     </li>
-                    <li class="pagination-item">
-                        <a href="#"><img src="img/" width="" height=""></a>
+                    <li>
+                        <a class="pagination-control" href="#"></a>
                     </li>
                 </ul>
             </div>
         </main>
         <footer class="main-footer">
             <div class="footer-social">
-                <a class="social-btn social-btn-twitter" href="#"><img src="img/social_tw.png" width="25" height="16" alt="Твиттер"></a>
-                <a class="social-btn social-btn-instagram" href="#"><img src="img/social_in.png" width="25" height="16" alt="Инстаграм"></a>
-                <a class="social-btn social-btn-facebook" href="#"><img src="img/social_fb.png" width="12" height="22" alt="Фейсбук"></a>
-                <a class="social-btn social-btn-vkontakte" href="#"><img src="img/social_vk.png" width="21" height="21" alt="Вконтакте"></a>
+                <a class="social-btn social-btn-twitter" href="#"><img src="img/social_tw.svg" width="25" height="16" alt="Твиттер"></a>
+                <a class="social-btn social-btn-instagram" href="#"><img src="img/social_in.svg" width="25" height="16" alt="Инстаграм"></a>
+                <a class="social-btn social-btn-facebook" href="#"><img src="img/social_fb.svg" width="12" height="22" alt="Фейсбук"></a>
+                <a class="social-btn social-btn-vkontakte" href="#"><img src="img/social_vk.svg" width="21" height="21" alt="Вконтакте"></a>
             </div>
             <div class="footer-menu">
                 <p class="footer-menu-item">
