--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     </head>
     <body>
         <header class="main-header">
-            <div class="container">
+            <div class="container clearfix">
                 <div class="logo">
-                    <a href="index.html"><img src="img/logo.svg" width="154" height="64" alt="Gllacy"></a>
+                    <a href="index.html"><img src="img/logo.svg" width="149" height="62" alt="Gllacy"></a>
                 </div>
-                <nav class="main-navigation"
+                <nav class="main-navigation">
                     <ul>
                         <li>
                             <a href="#">Каталог</a>
@@ -28,49 +28,36 @@
                 </nav>
                 <div class="user-blok">
                     <a class="search" href="#"><img src="img/search.svg" width="17" height="17" alt="Поиск"></a>
-                    <a class="login" href="#"><img src="img/login.svg" width="21" height="19">Вход</a>
-                    <a class="basket" href="#"><img src="img/basket.svg" width="21" height="20" alt="Корзина">Пусто
+                    <a class="login" href="#">Вход</a>
+                    <a class="basket" href="#">Пусто</a>
                         <span class="quantity"><span>
                     </a>
                 </div>
                 <section class="header-contact">
-                    <span class="time">С 10 до 20, ежедневно<span>
+                    <span class="time">С 10 до 20, ежедневно<span></br>
                     <span class="phone-number">8 812 450-25-25</span>
                 </section>
             </div>
         </header>
-        <main class="conteiner">
-            <div id="slider">
-                <img id="one" src="img/razz.jpg" width="560" height="229">
-                <img id="two" src="img/">
-                <img id="three" src="img/">
-                <ul>
-                    <li>
-                        <a href="one"></a>
-                    </li>
-                    <li>
-                        <a href="two"></a>
-                    </li>
-                    <li>
-                        <a href="three"></a>
-                    </li>
-                </ul>
+        <main class="container clearfix">
+            <div class="slider">
                 <div class="slider-header">
                     <h1>Крем-брюле и пломбир с малиновым джемом</h1>
                     <a class="btn" href="#">Давайте оба!</a>
                 </div>
             </div>
-            <div class="banner-wrapper">
+            <div class="banner-wrapper clearfix">
                 <div class="banner-left">
                     <h2 class="banner-title">Малинка даром!</h2>
                     <p class="banner-text">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
                     <a href="#" class="banner-link">Хочу варенье!</a>
                 </div>
                 <div class="banner-right">
-                    <p>
-                        <h2 class="banner-title">Шоколадки даром!</h2> При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.
+                    <h2 class="banner-title">Шоколадки даром!</h2>
+                    <p class="banner-text">
+                        При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.
                     </p>
-                    <a class="banner-link">Хочу варенье!</a>
+                    <a href="#"class="banner-link">Хочу шоколадки!</a>
                 </div>
             </div>
             <article class="catalog-product">
@@ -79,54 +66,59 @@
                         <img src="img/hit.png" width="61" height="61" alt="Хит">
                     </div>
                     <div class="preview">
-                        <img src="img/icecream_orange.jpg" width="600" height="600" alt="Сливочное">
+                        <img src="img/icecream_orange.jpg" width="267" height="267" alt="Сливочное">
                     </div>
                     <div class="price-title">
-                        <span class="price">310</span><span class="ruble">P/кг</span>
+                        <span class="price">310 </span><span class="ruble">P/кг</span>
                         <p class="product-title">
                             <a class="product-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                         </p>
                     </div>
                 </div>
                 <div class="product-item">
-                    <div class="hit">Хит</div>
+                    <div class="hit">
+                        <img src="img/hit.png" width="61" height="61" alt="Хит">
+                    </div>
                     <div class="preview">
-                        <img src="img/icecream_coffee.jpg" width="600" height="600" alt="Сливочно-кофейное">
+                        <img src="img/icecream_coffee.jpg" width="267" height="267" alt="Сливочно-кофейное">
                     </div>
                     <div class="price-title">
-                        <span class="price">380</span><span class="ruble">P/кг</span>
+                        <span class="price">380 </span><span class="ruble">P/кг</span>
                         <p class="product-title">
                             <a class="product-title">Сливочно-кофейное с кусочками шоколада</a>
                         </p>
                     </div>
                 </div>
                 <div class="product-item">
-                      <div class="hit">Хит</div>
-                      <div class="preview">
-                          <img src="img/icecream_strawberry.jpg" width="600" height="600" alt="Сливочно-клубничное">
-                      </div>
-                      <div class="price-title">
-                          <span class="price">355</span><span class="ruble">P/кг</span>
-                          <p class="product-title">
-                              <a class="product-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
-                          </p>
-                      </div>
-                  </div>
+                    <div class="hit">
+                        <img src="img/hit.png" width="61" height="61" alt="Хит">
+                    </div>
+                    <div class="preview">
+                        <img src="img/icecream_strawberry.jpg" width="267" height="267" alt="Сливочно-клубничное">
+                    </div>
+                    <div class="price-title">
+                        <span class="price">355 </span><span class="ruble">P/кг</span>
+                        <p class="product-title">
+                            <a class="product-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
+                        </p>
+                    </div>
                 </div>
                 <div class="product-item">
-                      <div class="hit">Хит</div>
-                      <div class="preview">
-                          <img src="img/icecream_caramel.jpg" width="600" height="600" alt="Сливочное крем-брюле">
-                      </div>
-                      <div class="price-title">
-                          <span class="price">415</span><span class="ruble">P/кг</span>
-                          <p class="product-title">
-                              <a class="product-title">Сливочное крем-брюле с карамельной подливкой</a>
-                          </p>
-                      </div>
+                    <div class="hit">
+                        <img src="img/hit.png" width="61" height="61" alt="Хит">
+                    </div>
+                    <div class="preview">
+                        <img src="img/icecream_caramel.jpg" width="267" height="267" alt="Сливочное крем-брюле">
+                    </div>
+                    <div class="price-title">
+                        <span class="price">415 </span><span class="ruble">P/кг</span>
+                        <p class="product-title">
+                            <a class="product-title">Сливочное крем-брюле с карамельной подливкой</a>
+                        </p>
+                    </div>
                 </div>
             </article>
-            <div class="advantages">
+            <div class="advantages clearfix">
                 <h3>Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
                 <div class="block-left">
                     <p class="advantages-item">
@@ -135,6 +127,7 @@
                     <p class="advantages-item">
                         Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
                     </p>
+                </div>
                 <div class="block-right">
                     <p class="advantages-item">
                         Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
@@ -144,7 +137,7 @@
                     </p>
                 </div>
             </div>
-            <div class="content">
+            <div class="content clearfix">
                 <div class="content-left">
                     <span class="blog-subtitle">Новое в нашем блоге</span>
                     <a class="blog-title" href="#">
@@ -154,8 +147,8 @@
                 <div class="content-right">
                     <p class="newsletter">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)
                     </p>
-                    <form action="https://echo.htmlacademy.ru">
-                        <input type="text" name="email" id="total-field" placehoder="Электронная почта">Электронная почта
+                    <form class="newsletter-form"action="https://echo.htmlacademy.ru">
+                        <input type="text" name="email" id="total-field" placeholder="Электронная почта">
                         <button type="submit">Отправить</button>
                     </form>
                 </div>
@@ -170,27 +163,27 @@
             </div>
         </main>
         <footer class="main-footer">
-            <div class="footer-social">
-                <a class="social-btn social-btn-twitter" href="#"><img src="img/social_tw.png" width="25" height="16" alt="Твиттер"></a>
-                <a class="social-btn social-btn-instagram" href="#"><img src="img/social_in.png" width="25" height="16" alt="Инстаграм"></a>
-                <a class="social-btn social-btn-facebook" href="#"><img src="img/social_fb.png" width="12" height="22" alt="Фейсбук"></a>
-                <a class="social-btn social-btn-vkontakte" href="#"><img src="img/social_vk.png" width="21" height="21" alt="Вконтакте"></a>
-            </div>
-            <div class="footer-menu">
-                <p class="footer-menu-item">
-                    <a href="#"><img src="img/" width="" height="">Для поставщиков</a>
-                    <a href="#">О производстве</a>
-                </p>
-                <p class="footer-menu-item">
-                    <a href="#">Наши документы</a>
-                    <a href="#">Экологические стандарты</a>
-                </p>
-            </div>
-            <div class="copyright">
-                <img src="img/" width="" height="">
-                <p>Сделано в
-                    <a href="#>" HTML Academy © 2016</a>
-                </p>
+            <div class="container clearfix">
+                <div class="footer-social">
+                    <a class="social-btn social-btn-twitter" href="#"></a>
+                    <a class="social-btn social-btn-instagram" href="#"></a>
+                    <a class="social-btn social-btn-facebook" href="#"></a>
+                    <a class="social-btn social-btn-vkontakte" href="#"></a>
+                </div>
+                <div class="footer-menu">
+                    <p class="footer-menu-item">
+                        <a href="#"><img src="img/" width="" height="">Для поставщиков</a>
+                        <a href="#">О производстве</a>
+                    </p>
+                    <p class="footer-menu-item">
+                        <a href="#">Наши документы</a>
+                        <a href="#">Экологические стандарты</a>
+                    </p>
+                </div>
+                <div class="copyright">
+                    <p>Сделано в<a href="#"> HTML Academy</a> © 2016
+                    </p>
+                </div>
             </div>
         </footer>
     </body>
