--- a/catalog.html
+++ b/catalog.html
@@ -28,9 +28,22 @@
                         </ul>
                     </nav>
                     <div class="user-blok">
-                        <a class="search" href="#"></a>
+                        <a class="search" href="#">
+                            <div>
+                              <form class="search-form">
+                                  <input class="search-user" type="text" name="search" placeholder="Что ищем?">
+                              </form>
+                            </div>
+                        </a>
                         <a class="login" href="#">Вход</a>
-                        <a class="basket basket-full" href="#"><span class="quantity">2 товара</span></a>
+                        <a class="basket basket-full" href="#"><span class="quantity">2 товара</span>
+                            <div class="user-basket">
+                                <div class="product-basket">
+                                    <div class="">
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="page-header_lower">
@@ -142,6 +155,22 @@
             </div>
             <article class="catalog-product">
                 <div class="product-item">
+                    <div class="product-hover">
+                        <div class="product-inner">
+                            <div class="preview">
+                                <img src="img/icecream_orange.jpg" width="267" height="267" alt="Сливочное">
+                            </div>
+                            <div class="price-title">
+                                <span class="price">310 </span><span class="ruble">P/кг</span>
+                                <p class="product-title">
+                                    <a class="product-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+                                </p>
+                            </div>
+                            <div class="btn-preview">
+                              <a href="#" class="btn">Быстрый просмотр</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="preview">
                         <img src="img/icecream_orange.jpg" width="267" height="267" alt="Сливочное">
                     </div>
